edited the style.css file for the contactinfo component to attempt to fix a bug that shows on mobile devices

--- a/client/src/components/ContactInfo/style.css
+++ b/client/src/components/ContactInfo/style.css
@@ -111,7 +111,7 @@
     }
     
     .contact-text-size {
-        font-size: 14px;
+        font-size: 13px;
     }
     
     .img-logo-contact {
